2006-07-13 Andrew Uselton <uselton2@llnl.gov>

	* Tag 1.9.6

	* Update all files with UCRL number in preparation for release.

	* Sanity check documentation.
	
2006-06-29 Andrew Uselton <uselton2@llnl.gov>

	* Tag 1.9.5

	* Modify dlopen() code to be configurable, set up elan and
	infiniband  variants.

	* Cast the "size_t count" parameter to Write() and Read() to be
	ssize_t.  This prevents incorrect execution when the
	system call returns an error condition (-1) and misinterprets it
	as a very large number.  There is also one in Snprintf.

	* Include "-Wextra" as a CCFLAGS flag to catch future instances of
	the above.  
	
2006-04-26 Andrew Uselton <uselton2@llnl.gov>

	* Tag 1.9.4

	* Add lwatch.py to the project, since lmtd actually is available
	as open source.  Modify references saying otherwise in the 
	documentations.
	
2006-04-20 Andrew Uselton <uselton2@llnl.gov>

	* Tag 1.9.3

	* Fix really stupid, pernicious, and fundamental bug regarding use
	of opt->flags and verbosity references in macros.  They appear in
	several places, especially base_report, before opts is
	initialized.  1) split base_report from flags test and introduce
	new conditional_report.  2) do not refer to opts in macros defined
	in options.h.  Use opts in macros only locally to mib.c.
	
2006-04-3 Andrew Uselton <uselton2@llnl.gov>

	* Tag 1.9.2

	* Take out the node averaging.  The BGL code has entirely forked
	and node averaging is only an issue there.  It is also less reasonable
	on non-BGL clusters because the tasks do not stay coordinated across 
	a node like they do on BGL.

	* The -V option should include the architecture, not just the signon 
	message.

	* regularize all the documentation so it all agrees.
	
2006-03-24 Andrew Uselton <uselton2@llnl.gov>

	* Tag 1.9.1

	* Add the architecture to the version string

2006-03-17 Andrew Uselton <uselton2@llnl.gov>

	* Tag 1.9

	* Allow for operation without MPI

	* Introduce random read option

	* Improve the mib.sh wrapper script
